Coloca css na mesma página do html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Porfólio</title>
-    <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" href="./style.css"> -->
+
+    <style>
+      body{
+      background-color: #071013;
+      font-family: 'EB Garamond', serif;
+      font-size: 18px;
+      text-align: center;
+      }
+
+      p, ul{
+        color: #75ABBC;
+      }
+
+      h1, h2, h3{
+        color: #23B5D3;
+      }
+
+      #minhafoto{
+        border-radius: 100%;
+      }
+    </style>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
